number of times you click

--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
 
         <div class= "animals">
             <img id="dog" src="./assets/dog-field.jpg" alt="dog"/>
+            <span id="dog-span"></span>
             <img id="cat" src="./assets/cat.jpg" alt="cat"/>
+            <span id="cat-span"></span>
             <img id="horse" src="./assets/horse.jpg" alt="horse"/>
+            <span id="horse-span"></span>
         </div> 
         
         <audio id="dog-sound" src="./assets/dogsound.wav"> </audio>
